--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-jvectormap/core": "^1.0.4",
+    "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "bcrypt": "^6.0.0",
