--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.0",
     "react-router-dom": "^7.5.1",
     "react-simple-maps": "^3.0.0"
   },
