--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jvectormap": "^2.0.4",
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
