--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jvectormap": "^2.0.4",
-    "pg": "^8.16.0",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.0",
