--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "jvectormap": "^2.0.4",
     "pg": "^8.16.3",
