--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
