--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.0",
     "react-router-dom": "^7.5.1",
-    "react-simple-maps": "^3.0.0"
+    "react-simple-maps": "^3.0.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
