Update import paths and image type definitions to use relative paths and add React type definitions for SVG imports

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tailwindcss -i ./src/index.css -o ./public/style.css --watch",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "build:css": "tailwindcss -i ./src/index.css -o ./public/style.css",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-jvectormap/core": "^1.0.4",
