--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-i18next": "^15.6.0",
     "react-router-dom": "^7.5.1",
     "react-simple-maps": "^3.0.0",
-    "react-window": "^1.8.11"
+    "react-window": "^1.8.11",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
