--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ VITE_API_BASE_URL=http://localhost:5000
 
 DB_PORT=5432
 PORT=5000
+// ALTER TABLE funko_items ALTER COLUMN series TYPE JSONB USING series::text::jsonb;
