--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "jvectormap": "^2.0.4",
+    "lucide-react": "^0.546.0",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
