--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "jvectormap": "^2.0.4",
     "lucide-react": "^0.546.0",
