--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "vite build",
     "build:css": "tailwindcss -i ./src/index.css -o ./public/style.css",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
+    "generate:diagrams": "node tools/generate-plantuml.cjs",
+    "generate:deps": "npx madge --image diagrams/deps.png src",
+    "render:diagrams": "node tools/render-puml.cjs"
   },
   "dependencies": {
     "@react-jvectormap/core": "^1.0.4",
@@ -56,8 +62,14 @@
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vite-plugin-svgr": "^4.3.0"
-  },
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^1.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "jsdom": "^22.0.0",
+    "ts-morph": "^17.0.0"
+  }
+  ,
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "databasepg.js",
   "keywords": [],
