--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,7 @@
-FROM node:18-alpine
-WORKDIR /usr/src/app
-
-# Install production dependencies
-COPY backend/package.json backend/package-lock.json* ./
-RUN npm install --production --legacy-peer-deps
-
-# Copy backend source
-COPY backend/ .
-
-ENV PORT=5000
+FROM node:20-alpine
+WORKDIR /backend
+COPY package*.json ./
+RUN npm install --omit=dev
+COPY . .
 EXPOSE 5000
-
-CMD ["node", "server.js"]
+CMD ["node", "server.js"]  # ← Just run server.js, not init-db.js
