--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
 services:
   backend:
     build:
-      context: ./backend
+      context: ./backend  # ← This tells Docker to use backend folder as context
       dockerfile: Dockerfile
     environment:
       - PORT=5000
@@ -21,7 +20,13 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "5173:5173"
+    volumes:
+      - ./src:/app/src  # ← This should mount src
+      - ./public:/app/public
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - backend
 
