--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
@@ -59,18 +61,15 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "jsdom": "^22.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
+    "ts-morph": "^17.0.0",
     "typescript": "^5.9.3",
     "vite": "^6.3.5",
-    "vite-plugin-svgr": "^4.3.0",
-    "vitest": "^1.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "jsdom": "^22.0.0",
-    "ts-morph": "^17.0.0"
-  }
-  ,
+    "vite-plugin-svgr": "^4.5.0",
+    "vitest": "^1.0.0"
+  },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "databasepg.js",
   "keywords": [],
