Fixed AI, added About Us and Features

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ COPY package*.json ./
 RUN npm install --omit=dev
 COPY . .
 EXPOSE 5000
-CMD ["node", "server.js"]  # ← Just run server.js, not init-db.js
+CMD ["node", "server.js"]  
