--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,75 +1,68 @@
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+  postgres:
+    image: postgres:17-alpine
+    container_name: funko-postgres
     environment:
-      - PORT=5000
-      - DB_HOST=postgres
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_NAME=webappdb
-      - DB_PORT=5432
-      # Add retry environment variables
-      - DB_MAX_RETRIES=10
-      - DB_RETRY_DELAY=5000
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: Web_AppDB
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d Web_AppDB"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+    restart: unless-stopped
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  backend:
+    build: ./backend
+    container_name: funko-backend
+    environment:
+      PORT: 5000
+      DB_HOST: postgres
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: Web_AppDB
+      DB_PORT: 5432
+      JWT_SECRET: test_secret
+      JWT_EXPIRES_IN: 1h
+      CORS_ORIGIN: http://localhost:5173
+      NODE_ENV: development
     ports:
       - "5000:5000"
     depends_on:
       postgres:
         condition: service_healthy
-    # Add restart policy for auto-recovery
     restart: unless-stopped
-    # Optional: Add healthcheck for backend
-    healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    command: >
+      sh -c "
+        echo 'Waiting for PostgreSQL...' &&
+        sleep 15 &&
+        echo 'Starting backend...' &&
+        node server.js
+      "
 
   frontend:
     build:
-      context: .  # Frontend is in root directory
+      context: .
       dockerfile: Dockerfile
+    container_name: funko-frontend
     ports:
-      - "5175:5175"
+      - "5173:5173"
     volumes:
       - ./src:/app/src
       - ./public:/app/public
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      # Add Vite env variables
-      - VITE_API_URL=http://localhost:5000
+      - VITE_API_URL=http://backend:5000  # Changed from localhost
     depends_on:
-      backend:
-        condition: service_healthy
-    # Add restart policy
-    restart: unless-stopped
-
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: webappdb
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      # Add init scripts directory
-      - ./init-db:/docker-entrypoint-initdb.d
-    # Add healthcheck for PostgreSQL
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d webappdb"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-      start_period: 10s
-    # Optional: Expose port for local tools
-    ports:
-      - "5432:5432"
-    # Add restart policy
+      - backend
     restart: unless-stopped
 
 volumes:
-  pgdata:
+  postgres_data:
