--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,12 +37,11 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "80:5173"
+      - "80:80"
     environment:
-      VITE_API_URL: http://192.168.0.162:5000
+      VITE_API_URL: http://backend:5000
     depends_on:
       - backend
-    command: npm run dev -- --host 0.0.0.0
 
 volumes:
   postgres_data:
