--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-router-dom": "^7.5.1",
     "react-simple-maps": "^3.0.0",
     "react-window": "^1.8.11",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "tooltip": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
