Added small fixes (uniform translation of pages)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "noEmit": true,
     "lib": ["ES2020", "DOM"]
   },
-  "include": ["src/**/*", "tools/**/*"]
+  "include": ["frontend/src/**/*", "tools/**/*"]
 }
