--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.11",
+    "ts-node-dev": "^2.0.0"
   },
   "keywords": [],
   "author": "",
