--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,6 @@ VITE_API_BASE_URL=http://localhost:5000
 
 DB_PORT=5432
 PORT=5000
+NOVU_API_KEY=bd34ed150f2e9d6b336a87f2a3a9d542
+NOVU_TEMPLATE_ID=password-reset
 // ALTER TABLE funko_items ALTER COLUMN series TYPE JSONB USING series::text::jsonb;
