--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "test:ui": "vitest --ui",
     "generate:diagrams": "node tools/generate-plantuml.cjs",
     "generate:deps": "npx madge --image diagrams/deps.png src",
-    "render:diagrams": "node tools/render-puml.cjs"
+    "render:diagrams": "node tools/render-puml.cjs",
+    "start": "concurrently \"npm run dev\" \"cd backend && node server.js\""
   },
   "dependencies": {
+    "@novu/node": "^2.6.6",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/cli": "^4.1.3",
@@ -26,6 +28,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
@@ -33,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "jvectormap": "^2.0.4",
     "lucide-react": "^0.546.0",
+    "nodemailer": "^8.0.1",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
